# apps/api/swagger.json
@@ -193,6 +193,106 @@
         "x-samchon-controller": "SessionsController"
       }
     },
+    "/requests": {
+      "get": {
+        "tags": [],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/MentorshipRequest"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "x-samchon-accessor": [
+          "requests",
+          "getAll"
+        ],
+        "x-samchon-controller": "RequestsController"
+      },
+      "post": {
+        "tags": [],
+        "parameters": [],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateRequestDto"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "201": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MentorshipRequest"
+                }
+              }
+            }
+          }
+        },
+        "x-samchon-accessor": [
+          "requests",
+          "create"
+        ],
+        "x-samchon-controller": "RequestsController"
+      }
+    },
+    "/requests/{id}/status": {
+      "patch": {
+        "tags": [],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateRequestStatusDto"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MentorshipRequest"
+                }
+              }
+            }
+          }
+        },
+        "x-samchon-accessor": [
+          "requests",
+          "status",
+          "updateStatus"
+        ],
+        "x-samchon-controller": "RequestsController"
+      }
+    },
     "/sessions/{sessionId}/messages": {
       "get": {
         "tags": [],
@@ -330,6 +430,7 @@
     },
     "/mentors/profile": {
       "post": {
+        "description": "Seul un MENTOR peut créer son profil",
         "tags": [],
         "parameters": [],
         "requestBody": {
@@ -354,6 +455,11 @@
             }
           }
         },
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
         "x-samchon-accessor": [
           "mentors",
           "profile",
@@ -362,6 +468,7 @@
         "x-samchon-controller": "MentorsController"
       },
       "patch": {
+        "description": "Seul un MENTOR peut modifier son profil",
         "tags": [],
         "parameters": [],
         "requestBody": {
@@ -386,112 +493,17 @@
             }
           }
         },
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
         "x-samchon-accessor": [
           "mentors",
           "profile",
           "updateProfile"
         ],
         "x-samchon-controller": "MentorsController"
-      }
-    },
-    "/requests": {
-      "get": {
-        "tags": [],
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/MentorshipRequest"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "x-samchon-accessor": [
-          "requests",
-          "getAll"
-        ],
-        "x-samchon-controller": "RequestsController"
-      },
-      "post": {
-        "tags": [],
-        "parameters": [],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/CreateRequestDto"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "201": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/MentorshipRequest"
-                }
-              }
-            }
-          }
-        },
-        "x-samchon-accessor": [
-          "requests",
-          "create"
-        ],
-        "x-samchon-controller": "RequestsController"
-      }
-    },
-    "/requests/{id}/status": {
-      "patch": {
-        "tags": [],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "schema": {
-              "type": "string"
-            },
-            "required": true
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/UpdateRequestStatusDto"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/MentorshipRequest"
-                }
-              }
-            }
-          }
-        },
-        "x-samchon-accessor": [
-          "requests",
-          "status",
-          "updateStatus"
-        ],
-        "x-samchon-controller": "RequestsController"
       }
     },
     "/auth/register": {
@@ -709,6 +721,90 @@
           "status"
         ]
       },
+      "MentorshipRequest": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "mentorId": {
+            "type": "string"
+          },
+          "menteeId": {
+            "type": "string"
+          },
+          "message": {
+            "type": "string"
+          },
+          "status": {
+            "oneOf": [
+              {
+                "const": "PENDING"
+              },
+              {
+                "const": "ACCEPTED"
+              },
+              {
+                "const": "REJECTED"
+              },
+              {
+                "const": "CANCELLED"
+              }
+            ]
+          },
+          "createdAt": {
+            "type": "string",
+            "format": "date-time"
+          }
+        },
+        "required": [
+          "id",
+          "mentorId",
+          "menteeId",
+          "message",
+          "status",
+          "createdAt"
+        ]
+      },
+      "CreateRequestDto": {
+        "type": "object",
+        "properties": {
+          "mentorId": {
+            "type": "string"
+          },
+          "message": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "mentorId",
+          "message"
+        ]
+      },
+      "UpdateRequestStatusDto": {
+        "type": "object",
+        "properties": {
+          "status": {
+            "oneOf": [
+              {
+                "const": "PENDING"
+              },
+              {
+                "const": "ACCEPTED"
+              },
+              {
+                "const": "REJECTED"
+              },
+              {
+                "const": "CANCELLED"
+              }
+            ]
+          }
+        },
+        "required": [
+          "status"
+        ]
+      },
       "Message": {
         "type": "object",
         "properties": {
@@ -822,90 +918,6 @@
           }
         },
         "required": []
-      },
-      "MentorshipRequest": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "string"
-          },
-          "mentorId": {
-            "type": "string"
-          },
-          "menteeId": {
-            "type": "string"
-          },
-          "message": {
-            "type": "string"
-          },
-          "status": {
-            "oneOf": [
-              {
-                "const": "PENDING"
-              },
-              {
-                "const": "ACCEPTED"
-              },
-              {
-                "const": "REJECTED"
-              },
-              {
-                "const": "CANCELLED"
-              }
-            ]
-          },
-          "createdAt": {
-            "type": "string",
-            "format": "date-time"
-          }
-        },
-        "required": [
-          "id",
-          "mentorId",
-          "menteeId",
-          "message",
-          "status",
-          "createdAt"
-        ]
-      },
-      "CreateRequestDto": {
-        "type": "object",
-        "properties": {
-          "mentorId": {
-            "type": "string"
-          },
-          "message": {
-            "type": "string"
-          }
-        },
-        "required": [
-          "mentorId",
-          "message"
-        ]
-      },
-      "UpdateRequestStatusDto": {
-        "type": "object",
-        "properties": {
-          "status": {
-            "oneOf": [
-              {
-                "const": "PENDING"
-              },
-              {
-                "const": "ACCEPTED"
-              },
-              {
-                "const": "REJECTED"
-              },
-              {
-                "const": "CANCELLED"
-              }
-            ]
-          }
-        },
-        "required": [
-          "status"
-        ]
       },
       "AuthTokensDto": {
         "type": "object",
